# rabbitmq_connet_pool

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
examples/: CMakeLists.txt  amqp_connect_pool.c  amqp_consumer.c  config.ini  daemonize.c  list.c  list.h  readn.c  single.c  socket.c  utils.c  utils.h
header_file/: unp.h
librabbitmq/: Makefile  amqp_socket.c
php_example/: http_api.php  publish_message.php
